[package]
name = "lol-perf"
version = "0.1.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tonic = "0.5"
clap = "3.0.0-beta.4"
anyhow = "1"
async-trait = "0.1"
lol-core = "0.7" 

[profile.release]
debug = true